docs/versioned_docs/version-0.8.x/04-typescript-api/01-natural-language-processing/LLMModule.md
---
title: LLMModule
---

TypeScript API implementation of the [useLLM](../../03-hooks/01-natural-language-processing/useLLM.md) hook.

## API Reference

- For detailed API Reference for `LLMModule` see: [`LLMModule` API Reference](../../06-api-reference/classes/LLMModule.md).
- For all LLM models available out-of-the-box in React Native ExecuTorch see: [LLM Models](../../06-api-reference/index.md#models---llm).
- For useful LLM utility functionalities please refer to the following link: [LLM Utility Functionalities](../../06-api-reference/index.md#utilities---llm).

## High Level Overview

```typescript
import { LLMModule, LLAMA3_2_1B_QLORA } from 'react-native-executorch';

// Creating an instance and loading the model
const llm = await LLMModule.fromModelName(
  LLAMA3_2_1B_QLORA,
  (progress) => console.log(progress),
  (token) => console.log(token),
  (messages) => console.log(messages)
);

// Running the model - returns the generated response
const response = await llm.sendMessage('Hello, World!');
console.log('Response:', response);

// Interrupting the model (to actually interrupt the generation it has to be called when sendMessage or generate is running)
llm.interrupt();

// Deleting the model from memory
llm.delete();
```

### Methods

All methods of `LLMModule` are explained in details here: [LLMModule API Reference](../../06-api-reference/classes/LLMModule.md).

## Loading the model

Use the static [`fromModelName`](../../06-api-reference/classes/LLMModule.md#frommodelname) factory method:

```typescript
const llm = await LLMModule.fromModelName(
  LLAMA3_2_3B, // model config constant
  onDownloadProgress, // optional, progress 0–1
  tokenCallback, // optional, called on every token
  messageHistoryCallback // optional, called when generation finishes
);
```

The model config object contains `modelSource`, `tokenizerSource`, `tokenizerConfigSource`, and optional `capabilities`. Pass one of the built-in constants (e.g. `LLAMA3_2_3B`) or construct it manually.

This method returns a promise resolving to an `LLMModule` instance.

For more information on loading resources, take a look at [loading models](../../01-fundamentals/02-loading-models.md) page.

## Listening for download progress

To subscribe to the download progress event, you can pass the `onDownloadProgress` callback as the second argument to [`fromModelName`](../../06-api-reference/classes/LLMModule.md#frommodelname). This function is called whenever the download progress changes.

## Running the model

To run the model, you can use [`generate`](../../06-api-reference/classes/LLMModule.md#generate) method. It allows you to pass chat messages and receive completion from the model. It doesn't provide any message history management.

Alternatively in managed chat (see: [Functional vs managed](../../03-hooks/01-natural-language-processing/useLLM.md#functional-vs-managed)), you can use the [`sendMessage`](../../06-api-reference/classes/LLMModule.md#sendmessage) method. It accepts the user message and returns a promise that resolves to the generated response. Additionally, it will call [`messageHistoryCallback`](../../06-api-reference/classes/LLMModule.md#messagehistorycallback) with the updated message history containing both user message and model response.

If you need raw model access without any wrappers, you can use [`forward`](../../06-api-reference/classes/LLMModule.md#forward). It provides direct access to the model, so the input string is passed straight into the model and returns the generated response. It may be useful to work with models that aren't finetuned for chat completions. If you're not sure what are implications of that (e.g. that you have to include special model tokens), you're better off with [`sendMessage`](../../06-api-reference/classes/LLMModule.md#sendmessage).

## Listening for generated tokens

To subscribe to the token generation event, you can pass [`tokenCallback`](../../06-api-reference/classes/LLMModule.md#tokencallback) or [`messageHistoryCallback`](../../06-api-reference/classes/LLMModule.md#messagehistorycallback) functions to the constructor. [`tokenCallback`](../../06-api-reference/classes/LLMModule.md#tokencallback) is called on every token and contains only the most recent token. [`messageHistoryCallback`](../../06-api-reference/classes/LLMModule.md#messagehistorycallback) is called whenever model finishes generation and contains all message history including user's and model's last messages.

## Interrupting the model

In order to interrupt the model, you can use the [`interrupt`](../../06-api-reference/classes/LLMModule.md#interrupt) method.

## Token Batching

Depending on selected model and the user's device generation speed can be above 60 tokens per second. If the [`tokenCallback`](../../06-api-reference/classes/LLMModule.md#tokencallback) triggers rerenders and is invoked on every single token it can significantly decrease the app's performance. To alleviate this and help improve performance we've implemented token batching. To configure this you need to call [`configure`](../../06-api-reference/classes/LLMModule.md#configure) method and pass [`generationConfig`](../../06-api-reference/interfaces/LLMConfig.md#generationconfig). In the next section, there are listed what you can tweak with this config.

## Configuring the model

To configure model (i.e. change system prompt, load initial conversation history or manage tool calling, set generation settings) you can use
[`configure`](../../06-api-reference/classes/LLMModule.md#configure) method. [**`chatConfig`**](../../06-api-reference/interfaces/LLMConfig.md#chatconfig) and [**`toolsConfig`**](../../06-api-reference/interfaces/LLMConfig.md#toolsconfig) is only applied to managed chats i.e. when using [`sendMessage`](../../06-api-reference/classes/LLMModule.md#sendmessage) (see: [Functional vs managed](../../03-hooks/01-natural-language-processing/useLLM.md#functional-vs-managed)) It accepts object with following fields:

- [`chatConfig`](../../06-api-reference/interfaces/LLMConfig.md#chatconfig) - Object configuring chat management that contains:
  - [`systemPrompt`](../../06-api-reference/interfaces/ChatConfig.md#systemprompt) - Often used to tell the model what is its purpose, for example - "Be a helpful translator".

  - [`initialMessageHistory`](../../06-api-reference/interfaces/ChatConfig.md#initialmessagehistory) - Object that represent the conversation history. This can be used to provide initial context to the model.

  - [`contextStrategy`](../../06-api-reference/interfaces/ChatConfig.md#contextstrategy) - Object implementing [`ContextStrategy`](../../06-api-reference/interfaces/ContextStrategy.md) interface used to manage conversation context, including trimming history if necessary. Custom strategies can be implemented or one of the built-in options can be used (e.g. [`NoopContextStrategy`](../../06-api-reference/classes/NoopContextStrategy.md), [`MessageCountContextStrategy`](../../06-api-reference/classes/MessageCountContextStrategy.md) or the default [`SlidingWindowContextStrategy`](../../06-api-reference/classes/SlidingWindowContextStrategy.md)).

- [`toolsConfig`](../../06-api-reference/interfaces/ToolsConfig.md) - Object configuring options for enabling and managing tool use. **It will only have effect if your model's chat template support it**. Contains following properties:
  - [`tools`](../../06-api-reference/interfaces/ToolsConfig.md#tools) - List of objects defining tools.

  - [`executeToolCallback`](../../06-api-reference/interfaces/ToolsConfig.md#executetoolcallback) - Function that accepts [`ToolCall`](../../06-api-reference/interfaces/ToolCall.md), executes tool and returns the string to model.

  - [`displayToolCalls`](../../06-api-reference/interfaces/ToolsConfig.md#displaytoolcalls) - If set to `true`, JSON tool calls will be displayed in chat. If `false`, only answers will be displayed.

- [`generationConfig`](../../06-api-reference/interfaces/LLMConfig.md#generationconfig) - Object configuring generation settings with following properties:
  - [`outputTokenBatchSize`](../../06-api-reference/interfaces/GenerationConfig.md#batchtimeinterval) - Soft upper limit on the number of tokens in each token batch (in certain cases there can be more tokens in given batch, i.e. when the batch would end with special emoji join character).

  - [`batchTimeInterval`](../../06-api-reference/interfaces/GenerationConfig.md#batchtimeinterval) - Upper limit on the time interval between consecutive token batches.

  - [`temperature`](../../06-api-reference/interfaces/GenerationConfig.md#temperature) - Scales output logits by the inverse of temperature. Controls the randomness / creativity of text generation.

  - [`topp`](../../06-api-reference/interfaces/GenerationConfig.md#topp) - Only samples from the smallest set of tokens whose cumulative probability exceeds topp. Range `[0, 1]`. Values of `0` or `1` disable top-p filtering.

  - [`minP`](../../06-api-reference/interfaces/GenerationConfig.md#minp) - Minimum-probability threshold applied after softmax: tokens whose probability is below `minP * max_prob` are excluded from sampling. Range `[0, 1]`. Default `0` disables the filter. Stacks with `topp` when both are set.

  - [`repetitionPenalty`](../../06-api-reference/interfaces/GenerationConfig.md#repetitionpenalty) - Multiplicative penalty applied to logits of tokens that already appeared in the prompt or the generated text. Values greater than `1` discourage repetition; default `1` disables the penalty.

:::info[Built-in models ship with sampling defaults]
Model presets expose an optional `generationConfig` that `LLMModule.fromModelName` applies automatically when available — for Qwen3 and LFM2-VL this means the model-card recommended sampling settings are in effect without any explicit `configure` call. Any fields you pass to `configure` still override on a per-field basis.
:::

## Vision-Language Models (VLM)

Some models support multimodal input — text and images together. To use them, pass `capabilities` in the model object when calling [`fromModelName`](../../06-api-reference/classes/LLMModule.md#frommodelname):

```typescript
import { LLMModule, LFM2_5_VL_1_6B_QUANTIZED } from 'react-native-executorch';

const llm = await LLMModule.fromModelName(
  LFM2_5_VL_1_6B_QUANTIZED,
  undefined,
  (token) => console.log(token)
);
```

The `capabilities` field is already set on the model constant. You can also construct the model object explicitly:

```typescript
const llm = await LLMModule.fromModelName({
  modelName: 'lfm2.5-vl-1.6b-quantized',
  modelSource: require('./path/to/model.pte'),
  tokenizerSource: require('./path/to/tokenizer.json'),
  tokenizerConfigSource: require('./path/to/tokenizer_config.json'),
  capabilities: ['vision'],
});
```

Once loaded, pass `imagePath` to [`sendMessage`](../../06-api-reference/classes/LLMModule.md#sendmessage):

```typescript
const response = await llm.sendMessage('What is in this image?', {
  imagePath: '/path/to/image.jpg',
});
```

Or use [`generate`](../../06-api-reference/classes/LLMModule.md#generate) with `mediaPath` on the message:

```typescript
const chat: Message[] = [
  {
    role: 'user',
    content: 'Describe this image.',
    mediaPath: '/path/to/image.jpg',
  },
];

const response = await llm.generate(chat);
```

## Using a custom model

Use [`fromCustomModel`](../../06-api-reference/classes/LLMModule.md#fromcustommodel) to load your own exported LLM instead of a built-in preset:

```typescript
import { LLMModule } from 'react-native-executorch';

const llm = await LLMModule.fromCustomModel(
  'https://example.com/model.pte',
  'https://example.com/tokenizer.json',
  'https://example.com/tokenizer_config.json',
  (progress) => console.log(progress),
  (token) => console.log(token),
  (messages) => console.log(messages)
);
```

### Required model contract

The `.pte` model binary must be exported following the [ExecuTorch LLM export process](https://docs.pytorch.org/executorch/1.1/llm/export-llm.html). The native runner expects the standard ExecuTorch text-generation interface — KV-cache management, prefill/decode phases, and logit sampling are all handled by the runtime.

## Deleting the model from memory

To delete the model from memory, you can use the [`delete`](../../06-api-reference/classes/LLMModule.md#delete) method.
